--- a/style.css
+++ b/style.css
@@ -127,6 +127,11 @@ body {
     background-color:#DAFFED8F ;
 }
 
+#anchor{
+  text-decoration: none;
+  color: black;
+}
+
 /* Responsive */
 @media screen and (max-width: 600px) {
   .container {
